<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MapsActivity"
    android:weightSum="1"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/logooceanosplace"
                tools:ignore="ContentDescription"/>

        </android.support.v7.widget.Toolbar>



    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/lapangan"
                    android:scaleType="centerCrop"
                    android:contentDescription=""
                    tools:ignore="ContentDescription"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mpv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_hour_mini_soccer_access"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:paddingTop="10dp"/>

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pantai Mutiara"
                    android:textColor="@color/bg_login"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/mpv_tipe"
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pantai_mutiara"
                    android:textAlignment="center"
                    android:textSize="16sp"/>



                <TextView
                    android:id="@+id/mpv_harga"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/bg_main"
                    android:text="@string/rp_1_400_000"/>

            </LinearLayout>
            <View
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bbb"/>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_calendar_icon"
                        android:layout_marginLeft="20dp"
                        tools:ignore="ContentDescription,RtlHardcoded,VectorDrawableCompat"
                        android:contentDescription=""/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/tanggal"
                        android:id="@+id/mpv_tanggal"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:textAlignment="center"
                        tools:ignore="RtlHardcoded"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_clock"
                        android:layout_marginLeft="20dp"
                        tools:ignore="ContentDescription,RtlHardcoded,VectorDrawableCompat"
                        android:contentDescription=""/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/waktu"
                        android:id="@+id/mpv_jam"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:textAlignment="center"
                        tools:ignore="RtlHardcoded"/>

                </LinearLayout>
                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textColor="@color/bg_login"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        tools:ignore="RtlHardcoded"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/litel_about"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        tools:ignore="RtlHardcoded"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="AMENITIES"
                        android:textColor="@color/bg_login"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        tools:ignore="RtlHardcoded"/>
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/fearure"
                        android:src="@drawable/gambar2"/>

                </LinearLayout>
                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"/>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:context=".activity.MapsActivity"
                    android:weightSum="1">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/bg_login"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        tools:ignore="RtlHardcoded"/>
                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        />
                    <View
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#bbb"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alamat"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        tools:ignore="RtlHardcoded"/>

                </LinearLayout>
                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#bbb"/>

                <Button
                    android:id="@+id/bookingActivity"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@color/bg_login"
                    android:gravity="center"
                    android:text="@string/booking_activity"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
